--- a/graduate_design_plugin/.classpath
+++ b/graduate_design_plugin/.classpath
@@ -9,5 +9,6 @@
 	<classpathentry kind="lib" path="lib/lucene-core-2.0.0.jar"/>
 	<classpathentry kind="lib" path="D:/开发环境/eclipse-SDK-3.6.2-win32/eclipse/plugins/org.eclipse.core.resources_3.6.1.R36x_v20110131-1630.jar"/>
 	<classpathentry kind="lib" path="D:/开发环境/eclipse-SDK-3.6.2-win32/eclipse/plugins/org.eclipse.jdt.core_3.6.2.v_A76_R36x.jar"/>
+	<classpathentry kind="lib" path="D:/开发环境/eclipse-SDK-3.6.2-win32/eclipse/plugins/org.eclipse.core.runtime_3.6.0.v20100505.jar" sourcepath="D:/开发环境/eclipse-SDK-3.6.2-win32/eclipse/plugins/org.eclipse.core.runtime.source_3.6.0.v20100505.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
