--- a/graduate_design_plugin/build.properties
+++ b/graduate_design_plugin/build.properties
@@ -2,4 +2,8 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               plugin.xml
+               plugin.xml,\
+               lib/args4j-2.0.6.jar,\
+               lib/jacob.jar,\
+               lib/je-analysis-1.5.3.jar,\
+               lib/lucene-core-2.0.0.jar
