add new feature

--- a/graduate_design_plugin/build.properties
+++ b/graduate_design_plugin/build.properties
@@ -6,4 +6,6 @@ bin.includes = META-INF/,\
                lib/args4j-2.0.6.jar,\
                lib/jacob.jar,\
                lib/je-analysis-1.5.3.jar,\
-               lib/lucene-core-2.0.0.jar
+               lib/lucene-core-2.0.0.jar,\
+               lib/mysql-connector-java-5.1.18-bin.jar,\
+               lib/Jama-1.0.2.jar
