--- a/graduate_design_plugin/.classpath
+++ b/graduate_design_plugin/.classpath
@@ -7,5 +7,14 @@
 	<classpathentry kind="lib" path="lib/jacob.jar"/>
 	<classpathentry kind="lib" path="lib/je-analysis-1.5.3.jar"/>
 	<classpathentry kind="lib" path="lib/lucene-core-2.0.0.jar"/>
+	<classpathentry kind="lib" path="D:/开发环境/eclipse-SDK-3.7.1-win32/eclipse/plugins/org.eclipse.core.filesystem_1.3.100.v20110423-0524.jar"/>
+	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.18-bin.jar"/>
+	<classpathentry kind="lib" path="lib/Jama-1.0.2.jar"/>
+	<classpathentry kind="lib" path="lib/junit-4.8.2.jar"/>
+	<classpathentry kind="lib" path="lib/bcmail-jdk14-132.jar"/>
+	<classpathentry kind="lib" path="lib/bcprov-jdk14-132.jar"/>
+	<classpathentry kind="lib" path="lib/checkstyle-all-4.2.jar"/>
+	<classpathentry kind="lib" path="lib/FontBox-0.1.0-dev.jar"/>
+	<classpathentry kind="lib" path="lib/PDFBox-0.7.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
